# eks_iam_role

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  eks_iam_role.bzl  go.mod  go.sum
cmd/eks-iam-role/: BUILD.bazel  main.go
examples/: s3.json
pkg/awswrapper/: BUILD.bazel  awswrapper.go  awswrapper_test.go
