load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/ldx/rules_eks_iam_role",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
    ],
    command = "update-repos",
)

gazelle(
    name = "gazelle-fix",
    command = "fix",
)
