load("@bazel_gazelle//:def.bzl", "gazelle")
load("//:eks_iam_role.bzl", "eks_iam_role")

gazelle(
    name = "gazelle",
    prefix = "github.com/ldx/rules_eks_iam_role",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
    ],
    command = "update-repos",
)

gazelle(
    name = "gazelle-fix",
    command = "fix",
)

eks_iam_role(
    name = "test",
    namespace = "test-namespace",
    oidc_issuer = "test-issuer",
    policy_document = ":examples/s3.json",
    service_account = "test-service-account",
)
