load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "eks-iam-role_lib",
    srcs = ["main.go"],
    importpath = "github.com/ldx/eks_iam_role/cmd/eks-iam-role",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/awswrapper",
        "@com_github_jessevdk_go_flags//:go-flags",
    ],
)

go_binary(
    name = "eks-iam-role",
    embed = [":eks-iam-role_lib"],
    visibility = ["//visibility:public"],
)
